<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.teokr.tp_am_interfacessimples.Interface_4">

    <Button
        android:id="@+id/Int4_hand"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="139dp"
        android:text="@string/sport1"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/Int4_golf"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/Int4_hand"
        android:layout_alignRight="@+id/Int4_hand"
        android:layout_below="@+id/Int4_hand"
        android:layout_marginTop="47dp"
        android:text="@string/sport2" />

    <Button
        android:id="@+id/Int4_rugby"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/Int4_golf"
        android:layout_alignRight="@+id/Int4_golf"
        android:layout_below="@+id/Int4_golf"
        android:layout_marginTop="57dp"
        android:text="@string/sport3" />

    <TextView
        android:id="@+id/Int4_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:text="SPORT" />

    <Button
        android:id="@+id/Int4_acc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/Int4_rugby"
        android:layout_alignStart="@+id/Int4_rugby"
        android:layout_below="@+id/Int4_rugby"
        android:layout_marginTop="33dp"
        android:text="@string/accueil" />

    <TextView
        android:id="@+id/Int4_nom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="22dp"
        android:layout_marginStart="22dp"
        android:text="TextView"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="italic" />

    <TextView
        android:id="@+id/Int4_prenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/Int4_nom"
        android:layout_marginEnd="25dp"
        android:layout_marginRight="25dp"
        android:text="TextView"
        android:textColor="@android:color/holo_red_dark"
        android:textStyle="italic" />

</RelativeLayout>
